@@ -71,6 +71,7 @@ DEV: scalability + performance
 - fixed bug: boxplots: now, it sets 'mark=*' for outliers if there is no mark (compat=1.12)
 - fixed regression: compat=1.11 broke arcs inside of axis
 - new feature: ensured that arcs inside of axis make use of 'axis cs' and 'axis direction cs' automatically
+- new feature: ensured that (0:1) is evaluated with axis cs
 - fixed bug: precision of transformation cartesian to polar was too low (added atan2 to fpu)
 - fixed bug: z buffer caused 'mesh legend' to produce a compile error
 - new feature: added 'y filter/.expression={y==3 ? nan : y}' to simplify coordinate filters
