@@ -937,6 +937,24 @@ La.
 
 \begin{bugtracker}
 
+\begin{bug}
+	bugs:\#74 Wrong value from the \verb|\pgfplotsunit[xyz]length| macro
+
+	\url{https://sourceforge.net/p/pgfplots/bugs/74/}
+\end{bug}
+
+\begin{bug}
+		bugs:\#75 \verb|\pgfplotstablesort| doesn't sort correctly if there's a NaN in the column
+
+		\url{https://sourceforge.net/p/pgfplots/bugs/75/}
+\end{bug}
+
+\begin{bug}
+	\verb|(axis cs:0,0)| is not the same as \verb|(axis cs:0,0,0)| in 3d axes! something with the datascale trafo spoils it
+
+	\url{http://tex.stackexchange.com/questions/223623/pgfplots-tikz-interoperability-and-axis-equal}
+\end{bug}
+
 \begin{bug}[closed]
 	make LUA ready for LUA 5.3
 
@@ -3861,6 +3879,12 @@ and you can remark that colour filling overlaps x- and y-axis ! So I suggest tha
 \begin{bugtracker}
 
 \begin{feature}
+	feature-requests:\#41 RFE: Add every quiver plot style key
+
+	\url{https://sourceforge.net/p/pgfplots/feature-requests/41}
+\end{feature}
+
+\begin{feature}
 	lua backend support for \verb|restrict expr to domain|
 \end{feature}
 
@@ -4706,6 +4730,11 @@ unset surface; set cntrparam levels 10; set contour; splot "contour3d_contourtmp
 	Implement a custom legend environment such that one doesn't need to collect all options manually
 
 	\verb|http://tex.stackexchange.com/questions/54794/using-a-pgfplots-style-legend-in-a-plain-old-tikzpicture|
+\end{feature}
+
+\begin{feature}[epic=Bar plots]
+	feature-requests:\#43 Option to set the BaseValue of a bar plot
+	\url{https://sourceforge.net/p/pgfplots/feature-requests/43/}
 \end{feature}
 
 \begin{feature}[epic=Bar plots]
