@@ -1,21 +1,16 @@
-unittest_3d_12.tex
-# optional:
-unittest_align_0.tex
-unittest_anchorborder.tex
-# log axis:
-unittest_axispath_0.tex
+# This file contains names of all test suite which are expected to run in lua backend, i.e. they 
+# will be executed with 'lua debug=compileerror'.
 #
-# symbolic coords:
-unittest_bars_centered_nodes_near_coords.tex
+# See also luatest_automatic_texfallback.list
+# ---------------------------
+unittest_3d_12.tex
+#
 #
 unittest_closedcycle_smooth_handler.tex
-unittest_colorbar_datacs.tex
 unittest_colormap_2.tex
 unittest_contour_matlabformat_0.tex
 unittest_datascaling_near_0.tex
 unittest_empty_line.tex
-unittest_errorbar_asymmetric_coordinates2d.tex
-unittest_errorbar_asymmetric_tableptr_colname.tex
 unittest_expr_1.tex
 unittest_expr_2.tex
 unittest_expr_oscillation.tex
@@ -44,12 +39,8 @@ unittest_libs_patchplots_10.tex
 unittest_libs_patchplots_13.tex
 unittest_libs_patchplots_30.tex
 unittest_libs_patchplots_bicubic_faceted_interp_1.tex
-unittest_libs_patchplots_explicit_color_input_colorspace.tex
 unittest_libs_statistics_boxplot.tex
 unittest_libs_units_0.tex
-unittest_logplotenv_10.tex
-unittest_logplotenv_14.tex
-unittest_logplotenv_16.tex
 #
 unittest_marks_0.tex
 unittest_mesh_interior_colormap_0.tex
@@ -61,37 +52,18 @@ unittest_misc_20.tex
 # yfilter:
 unittest_misc_6.tex
 unittest_node_on_plot_1.tex
-unittest_node_on_plot_bar_1.tex
 unittest_normalized_axis_cs.tex
 unittest_piecewise_fct_0.tex
 unittest_plot_expression_variable.tex
-unittest_plotgraphics3d_0.tex
-#
-# contour:
-unittest_plottypes_0.tex
-# hist:
-unittest_plottypes_13.tex
-# visualization depends on:
-unittest_plottypes_15.tex
-# customized scatter plot:
-unittest_plottypes_14.tex
-# quiver:
-unittest_plottypes_19.tex
 # const plot:
 unittest_plottypes_39.tex
 unittest_polar_1.tex
 unittest_scanline_2.tex
 unittest_scanline_3.tex
-unittest_shader_interp_explicitcolor_math.tex
 unittest_shader_interp_boundingbox_transformations_or_legend.tex
-unittest_stacked_0.tex
-unittest_surf_color_explicit_0.tex
-unittest_smithchart_0.tex
-unittest_ternary_0.tex
 unittest_trig_format_plots.tex
 unittest_view_0_90_viewdepth.tex
 unittest_updateLimits_false.tex
 unittest_libs_statistics_boxplot_average.tex
 unittest_libs_statistics_boxplot_variable_width.tex
 unittest_filter_by_expression.tex
-unittest_restrict_to_domain_log_filter.tex
