@@ -11011,6 +11011,7 @@
 	\let\pgfsetzvec@orig=\pgfsetzvec
 	\let\tikz@checkunit@orig=\tikz@checkunit
 	\let\pgfpatharcaxes@orig=\pgfpatharcaxes
+	\let\pgfpointpolarxy=\pgfpointpolarxy@orig
 	\let\tikz@do@arc@orig=\tikz@do@arc
 	%
 	\let\pgfsetxvec=\pgfplots@setxvec@restorepgfpoint
@@ -11024,6 +11025,9 @@
 	\let\pgfpointxyz=\pgfpointxyz@orig
 	\let\pgfqpointxyz=\pgfqpointxyz@orig
 	\let\tikz@checkunit=\tikz@checkunit@orig
+	\let\pgfpointpolarxy=\pgfpointpolarxy@orig
+	\let\pgfpatharcaxes=\pgfpatharcaxes@orig
+	\let\tikz@do@arc=\tikz@do@arc@orig
 }%
 
 \def\pgfplots@setxvec@restorepgfpoint#1{%
@@ -11186,6 +11190,7 @@
 		\let\pgfqpointxy=\pgfplotsqpointaxisxy
 		\let\pgfqpointxyz=\pgfplotsqpointaxisxyz
 		\let\pgfpatharcaxes=\pgfplots@patharcaxes
+		\let\pgfpointpolarxy=\pgfplots@pointpolarxy
 		\let\tikz@do@arc=\pgfplots@tikz@do@arc
 		%
 		% tikz checks for units before it calls \pgfpointxy . This must
@@ -11229,6 +11234,32 @@
 	\xdef\pgfplots@glob@TMPa{\the\t@pgfplots@toka{\pgfplots@arc@x}{\pgfplots@arc@y}}%
 	\endgroup
 	\pgfplots@glob@TMPa
+}%
+
+\def\pgfplots@polarxy@#1and #2\@@{%
+	\edef\pgfplots@polarxy@X{#1}%
+	\edef\pgfplots@polarxy@Y{#2}%
+}
+\def\pgfplots@pointpolarxy#1#2{%
+	\pgfutil@in@{and }{#2}%
+	\ifpgfutil@in@%
+		\pgfplots@polarxy@#2\@@%
+	\else%
+		\pgfplots@polarxy@#2and #2\@@%
+	\fi%  
+	\pgfmathparse{#1}%
+	\let\pgfpoint@angle=\pgfmathresult%
+	\pgfmathcos@{\pgfpoint@angle}%
+	\let\pgfpoint@cos=\pgfmathresult
+	\pgfmathsin@{\pgfpoint@angle}%
+	\let\pgfpoint@sin=\pgfmathresult
+	%
+	\begingroup
+	\pgfplots@plot@coords@mathparsertrue
+	\pgf@process{%
+		\pgfplotspointaxisxyz{\pgfplots@polarxy@X*\pgfpoint@cos}{\pgfplots@polarxy@Y*\pgfpoint@sin}{0}%
+	}%
+	\endgroup
 }%
 
 % #1 = angle of first point
