@@ -1,3 +1,7 @@
+2015-01-21 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
+
+	- new feature: ensured that (0:1) is evaluated with axis cs
+
 2015-01-04 Christian Feuersaenger <cfeuersaenger@users.sourceforge.net>
 
 	- fixed bug: z buffer caused 'mesh legend' to produce a compile error
